- Add composer script for testing

--- a/composer.json
+++ b/composer.json
@@ -26,5 +26,8 @@
             "Khazl\\LootCalculator\\Tests\\": "tests"
         }
     },
+    "scripts": {
+        "test": "phpunit"
+    },
     "extra": {}
 }
